--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "three": "^0.167.1",
     "three-spritetext": "^1.8.2",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "d3": "^7.8.5"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@types/react-table": "^7.7.20",
     "@types/three": "^0.167.1",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "@types/d3": "^7.4.3"
   }
 }
